Added Javadoc HTML and cleaned up tech debt